--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,2 +1,14 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+server.port=8090
+spring.application.name=config-server-client-userService
+
+#Active Profile - will relate to development properties file in the server.
+#If this property is absent then default profile will be activated which is
+#the property file without any environment name at the end.
+
+#spring.profiles.active=userService
+
+# this is the default
+
+spring.cloud.config.uri=http://localhost:8888
+
+#management.security.enabled=false
