--- a/muzix-service/src/main/resources/application.properties
+++ b/muzix-service/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-spring.data.mongodb.host=172.17.0.1
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=trackDb
-
-
 spring.track.trackId1=1
 spring.track.trackName1=coca cola
 spring.track.comments1=lukka chuppi
@@ -13,3 +8,7 @@ spring.track.comments2=tiger zinda h
 
 spring.trackNotFound=track not found
 spring.trackAlreadyExist=track already exist
+
+spring.application.name=config-server-client-muzixService
+spring.cloud.config.uri=http://localhost:8888
+#management.security.enabled=false
