--- a/muzix-service/src/main/resources/application.properties
+++ b/muzix-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port:8070
 
-spring.data.mongodb.host=172.17.0.1
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
 spring.data.mongodb.database=trackDb
