dockorized all microservices

--- a/muzix-service/src/main/resources/application.properties
+++ b/muzix-service/src/main/resources/application.properties
@@ -11,14 +11,12 @@ spring.track.comments2=tiger zinda h
 spring.trackNotFound=track not found
 spring.trackAlreadyExist=track already exist
 
-spring.application.name=config-server-client-muzixService
-spring.cloud.config.uri=http://localhost:8888
 #management.security.enabled=false
 
 eureka.instance.leaseRenewalIntervalInSeconds= 1
 eureka.instance.leaseExpirationDurationInSeconds= 2
-client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
-healthcheck.enabled= true
+eureka.client.serviceUrl.defaultZone=http://172.17.0.1:8761/eureka/
+eureka.client.healthcheck.enabled= true
 lease.duration= 5
 
 logging.level.com.stackroute= DEBUG
