--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-server.port=8090
-spring.application.name=config-server-client-userService
-
 #Active Profile - will relate to development properties file in the server.
 #If this property is absent then default profile will be activated which is
 #the property file without any environment name at the end.
@@ -9,14 +6,14 @@ spring.application.name=config-server-client-userService
 
 # this is the default
 
-spring.cloud.config.uri=http://localhost:8888
+server.port=8090
 
 #management.security.enabled=false
 
 eureka.instance.leaseRenewalIntervalInSeconds= 1
 eureka.instance.leaseExpirationDurationInSeconds= 2
-client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
-healthcheck.enabled= true
+eureka.client.serviceUrl.defaultZone=http://172.17.0.1:8761/eureka/
+eureka.client.healthcheck.enabled= true
 lease.duration= 5
 
 management.security.enabled=false
