--- a/muzix-service/pom.xml
+++ b/muzix-service/pom.xml
@@ -16,7 +16,6 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -84,7 +83,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version> 2.1.1.RELEASE</version>
 		</dependency>
 
 		<!--Cache dependency-->
@@ -108,6 +108,7 @@
 		</dependency>
 
 	</dependencies>
+<!--
 
 	<dependencyManagement>
 		<dependencies>
@@ -120,6 +121,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+-->
 
 	<build>
 		<plugins>
