--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -18,3 +18,6 @@ lease.duration= 5
 
 management.security.enabled=false
 logging.level.com.stackroute= DEBUG
+
+spring.userAlreadyExist=User already exist 
+spring.userNotFound=User not found
